--- a/package.json
+++ b/package.json
@@ -34,7 +34,11 @@
     "stylelint-config-standard": "^20.0.0"
   },
   "dependencies": {
+    "aos": "^2.3.4",
     "jquery": "^3.5.1",
-    "popper.js": "^1.16.1"
+    "jquery.stellar": "^0.6.2",
+    "owl.carousel": "^2.3.4",
+    "popper.js": "^1.16.1",
+    "waypoints": "^4.0.1"
   }
 }
