photo section 3 and 4

--- a/.prettierrc
+++ b/.prettierrc
@@ -3,5 +3,6 @@
     "singleQuote": true,
     "tabWidth": 4,
     "trailingComma": "none",
-    "semi": true
+    "semi": true,
+    "htmlWhitespaceSensitivity": "ignore"
 }
